--- a/package.json
+++ b/package.json
@@ -25,8 +25,16 @@
     },
     "dependencies": {
         "axios-delay": "^1.0.0-rc6",
+        "chart.js": "^2.9.4",
         "laravel-vue-pagination": "^2.3.1",
+        "leaflet": "^1.7.1",
         "vform": "^1.0.1",
-        "vue-router": "^3.5.1"
+        "vue-chartjs": "^3.5.1",
+        "vue-excel-export": "^0.1.3",
+        "vue-notification": "^1.3.20",
+        "vue-router": "^3.5.1",
+        "vue-select": "^3.11.2",
+        "vue2-google-maps": "^0.10.7",
+        "vue2-leaflet": "^2.6.0"
     }
 }
