--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "axios-delay": "^1.0.0-rc6",
         "chart.js": "^2.9.4",
+        "jspdf": "^2.3.1",
+        "jspdf-autotable": "^3.5.14",
         "laravel-vue-pagination": "^2.3.1",
         "leaflet": "^1.7.1",
         "vform": "^1.0.1",
