--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,21 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
-        "laravel/passport": "^9.3.2",
-        "laravel/socialite": "^4.4",
-        "laravel/tinker": "^1.0",
-        "spatie/laravel-cors": "^1.3"
+        "laravel/framework": "^8.0",
+        "laravel/passport": "^10.3.2",
+        "laravel/socialite": "^5.4",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^3.0",
+        "guzzlehttp/guzzle": "^7.0.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0",
+        "facade/ignition": "^2.3.6"
     },
     "config": {
         "optimize-autoloader": true,
